--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h2>HTML Images</h2>
+<p>HTML images are defined with the img tag:</p>
+
+<img src="https://joco7.github.io/frgrgrgrrg/ki-a-vilag-legjobb-focistaja-messi-vagy-ronaldo-a-jobb.jpeg" alt="W3Schools.com" width="1024" height="768">
+
+</body>
+</html>
